# ChangeLog for x11-plugins/compiz-fusion-plugins-extra
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/compiz-fusion-plugins-extra/Attic/ChangeLog,v 1.9 2008/11/15 02:14:22 jmbsvicetto Exp $

  15 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  compiz-fusion-plugins-extra-0.7.8.ebuild:
  Removed the mirror restriction that was used for the overlay.

  01 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +files/compiz-fusion-plugins-extra-no-gconf.patch,
  +files/compiz-fusion-plugins-extra-text-fix.patch, metadata.xml:
  Fixed metadata.xml by removing hanno now that he is on the desktop-effects
  herd and fixing the description. Added the missing patches.

  27 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  compiz-fusion-plugins-extra-0.7.8.ebuild:
  Removed the bug reporting warning that was copied from the desktop-effects
  overlay by mistake.

*compiz-fusion-plugins-extra-0.7.8 (27 Oct 2008)

  27 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  metadata.xml, +compiz-fusion-plugins-extra-0.7.8.ebuild:
  Added compiz-0.7.8 to the tree

  25 Oct 2007; Olivier Crête <tester@gentoo.org>
  compiz-fusion-plugins-extra-0.6.0.ebuild:
  Marked ~amd64

  24 Oct 2007; Luca Barbato <lu_zero@gentoo.org>
  compiz-fusion-plugins-extra-0.6.0.ebuild:
  Marked ~ppc

  24 Oct 2007; Hanno Boeck <hanno@gentoo.org>
  compiz-fusion-plugins-extra-0.6.0.ebuild:
  QA fixes.

  23 Oct 2007; Hanno Boeck <hanno@gentoo.org>
  compiz-fusion-plugins-extra-0.6.0.ebuild:
  make check is broken upstream.

*compiz-fusion-plugins-extra-0.6.0 (23 Oct 2007)

  23 Oct 2007; Hanno Boeck <hanno@gentoo.org> +metadata.xml,
  +compiz-fusion-plugins-extra-0.6.0.ebuild:
  Initial compiz-fusion commit, ebuild based on xeffects overlay.
