@@ -1,6 +1,10 @@
 # ChangeLog for x11-plugins/compiz-fusion-plugins-extra
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/compiz-fusion-plugins-extra/Attic/ChangeLog,v 1.9 2008/11/15 02:14:22 jmbsvicetto Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/compiz-fusion-plugins-extra/Attic/ChangeLog,v 1.10 2009/04/11 17:00:09 jmbsvicetto Exp $
+
+  11 Apr 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  -compiz-fusion-plugins-extra-0.7.8.ebuild:
+  Removing old compiz 0.7.8 ebuilds - affected by bug 263678.
 
   15 Nov 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
   compiz-fusion-plugins-extra-0.7.8.ebuild:
